update circuit page

--- a/lib_circuit/index.html
+++ b/lib_circuit/index.html
@@ -47,7 +47,7 @@
             <!--Section-->
             <section>
                 <h2>Circuit Design / Gerber</h2>
-                <p>2022 June</p>
+                <p>2022 December</p>
                 <br>
                 <h3>
                     For Bill of material (BOM) and CAD template, please view the repository.</a>
@@ -59,73 +59,43 @@
                 <p>
                     <a href="https://github.takahashi65.info/lib_circuit/gerber_arduino_2_pokemon.zip" target="_blank">Gerber. Controller board</a>
                 </p>
-                <img src="https://github.takahashi65.info/lib_img/github_arduino2pokemon_breakoutboard_front.webp" max-width="512px" height=auto ><br>
-                <img src="https://github.takahashi65.info/lib_img/github_arduino2pokemon_breakoutboard_rear.webp" max-width="512px" height=auto ><br>
+                <hr>
+                <!--Project Separate-->
+                <br>
+                <h2>Arduino Nano, ATtiny85 MCU programer</h2>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_arduino2attiny85_front.webp" max-width="512px" height=auto><br>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_arduino2attiny85_rear.webp" max-width="512px" height=auto><br>
                 <p>
-                    <a href="https://github.takahashi65.info/lib_circuit/gerber_pokemongoplus_board.zip" target="_blank">Gerber. Breadout board</a>
+                    <a href="https://github.takahashi65.info/lib_circuit/gerber_arduino_2_attiny85.zip" target="_blank">Gerber</a>
                 </p>
                 <hr>
-                <!--Project End-->
-                <!--Project Start-->
+                <!--Project Separate-->
                 <br>
-                <h2>LM317 Linear Voltage Regulator Fan Speed Controller</h2>
-                <img src="https://github.takahashi65.info/lib_img/github_gerber_lm317_front.webp" max-width="512px" height=auto><br>
-                <img src="https://github.takahashi65.info/lib_img/github_gerber_lm317_rear.webp" max-width="512px" height=auto><br>
+                <h2>Arduino Nano, Fan Speed Controller Based on Temperature</h2>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_temp2pwm_front.webp" max-width="512px" height=auto><br>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_temp2pwm_rear.webp" max-width="512px" height=auto><br>
                 <p>
-                    <a href="https://github.takahashi65.info/lib_circuit/gerber_fanspeed_lm317t.zip" target="_blank">Gerber</a>
+                    <a href="https://github.takahashi65.info/lib_circuit/gerber_arduino_2_pwm.zip" target="_blank">Gerber</a>
                 </p>
                 <hr>
-                <!--Project End-->
-                <!--Project Start-->
+                <!--Project Separate-->
                 <br>
-                <h2>NE555 PWM Fan Speed Controller</h2>
-                <img src="https://github.takahashi65.info/lib_img/github_gerber_ne555_pwm_front.webp" max-width="512px" height=auto ><br>
-                <img src="https://github.takahashi65.info/lib_img/github_gerber_ne555_pwm_rear.webp" max-width="512px" height=auto ><br>
-                <p>
-                    <a href="https://github.takahashi65.info/lib_circuit/gerber_fanspeed_ne555.zip" target="_blank">Gerber</a>
-                </p>
-                <hr>
-                <!--Project End-->
-                <!--Project Start-->
-                <br>
-                <a href="https://github.com/adamhrv/skylift" target="_self"><h2>SkyLift, Wi-Fi Geolocation Spoofing</h2></a>
-                <img src="https://github.takahashi65.info/lib_img/github_gerber_skylift_front.webp" max-width="512px" height=auto ><br>
-                <img src="https://github.takahashi65.info/lib_img/github_gerber_skylift_rear.webp" max-width="512px" height=auto ><br>
-                <p>
-                    <a href="https://github.takahashi65.info/lib_circuit/gerber_fakegps_skylift.zip" target="_blank">Gerber</a>
-                </p>
-                <hr>
-                <!--Project End-->
-                <!--Project Start-->
-                <br>
-                <h2>AuraSync, RGB LED Converter Board</h2>
-                <img src="https://github.takahashi65.info/lib_img/github_gerber_aura_front.webp" max-width="512px" height=auto ><br>
-                <img src="https://github.takahashi65.info/lib_img/github_gerber_aura_rear.webp" max-width="512px" height=auto ><br>
-                <p>
-                    <a href="https://github.takahashi65.info/lib_circuit/gerber_aurasync.zip" target="_blank">Gerber</a><br>
-                </p>
-                <hr>
-                <!--Project End-->
-                <!--Project Start-->
-                <br>
-                <h2>1 to 3, PWM Fan Hub</h2>
-                <img src="https://github.takahashi65.info/lib_img/github_gerber_1to3_fanhub_front.webp" max-width="512px" height=auto ><br>
-                <img src="https://github.takahashi65.info/lib_img/github_gerber_1to3_fanhub_rear.webp" max-width="512px" height=auto ><br>
-                <p>
-                    <a href="https://github.takahashi65.info/lib_circuit/gerber_fanhub_1to3.zip" target="_blank">Gerber</a><br>
-                </p>
-                <hr>
-                <!--Project End-->
-                <!--Project Start-->
-                <br>
-                <h2>Arduino Nano based, Water Cooling Loop Sensor</h2>
+                <h2>Arduino Nano, Water Cooling Loop Sensor</h2>
                 <img src="https://github.takahashi65.info/lib_img/github_gerber_thermalsensor_front.webp" max-width="512px" height=auto ><br>
                 <img src="https://github.takahashi65.info/lib_img/github_gerber_thermalsensor_rear.webp" max-width="512px" height=auto ><br>
                 <p>
                     <a href="https://github.takahashi65.info/lib_circuit/gerber_arduino_waterloop_sensor.zip" target="_blank">Gerber</a>
                 </p>
-                <!--Project End-->
-                <!--Project Start-->
+                <hr>
+                <!--Project Separate-->
+                <br>
+                <a href="https://github.com/adamhrv/skylift" target="_self"><h2>SkyLift, ESP8266 MCU Wi-Fi Geolocation Spoofing</h2></a>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_skylift_front.webp" max-width="512px" height=auto ><br>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_skylift_rear.webp" max-width="512px" height=auto ><br>
+                <p>
+                    <a href="https://github.takahashi65.info/lib_circuit/gerber_fakegps_skylift.zip" target="_blank">Gerber</a>
+                </p>
+                <!--Project Separate-->
                 <br>
                 <h2>USB Type-C to Apple 30 Pin, iPod Dock</h2>
                 <img src="https://github.takahashi65.info/lib_img/github_gerber_usbc2apple_front.webp" max-width="512px" height=auto ><br>
@@ -133,7 +103,32 @@
                 <p>
                     <a href="https://github.takahashi65.info/lib_circuit/gerber_typec_2_apple30p_dock.zip" target="_blank">Gerber</a>
                 </p>
-                <!--Project End-->
+                <!--Project Separate-->
+                <br>
+                <h2>Nixie Tube Clock, Adapter Board</h2>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_nixie_adapter_front.webp" max-width="512px" height=auto><br>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_nixie_adapter_rear.webp" max-width="512px" height=auto><br>
+                <p>
+                    <a href="https://github.takahashi65.info/lib_circuit/gerber_nixie_clock_support_board.zip" target="_blank">Gerber</a>
+                </p>
+                <!--Project Separate-->
+                <br>
+                <h2>1 to 3, PWM Fan Hub</h2>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_1to3_fanhub_front.webp" max-width="512px" height=auto ><br>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_1to3_fanhub_rear.webp" max-width="512px" height=auto ><br>
+                <p>
+                    <a href="https://github.takahashi65.info/lib_circuit/gerber_fanhub_1to3.zip" target="_blank">Gerber</a>
+                </p>
+                <!--Project Separate-->
+                <br>
+                <h2>LED Candle With ATtiny85</h2>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_attiny85candle_rear.webp" max-width="512px" height=auto ><br>
+                <img src="https://github.takahashi65.info/lib_img/github_gerber_attiny85candle_front.webp" max-width="512px" height=auto ><br>
+                <p>
+                    <a href="https://github.takahashi65.info/lib_circuit/gerber_attiny85candle.zip" target="_blank">Gerber</a>
+                </p>
+                <!--Project Separate-->
+
             </section>
             <footer>
                 <p>Hosting on <a href="https://github.com/" target="_self">GitHub Pages</a> .<br>
