update html file and robots.txt

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <!-- META -->
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Cache-Control" content="max-age=86400"/>
-        <link rel="stylesheet" href="https://github.takahashi65.info/index.css">
+        <!-- Style -->
+        <link rel="stylesheet" href="/index.css">
         <!-- Favicon -->
-        <link rel="icon" type="image/png" href="https://github.takahashi65.info/favicon.png" sizes="256x256" />
-        <link rel="mask-icon" type="image/svg" href="https://github.takahashi65.info/favicon.svg" color="#000000" />
-        <link rel="alternate icon" type="image/x-icon" href="https://github.takahashi65.info/favicon.ico" sizes="256x256" />
-        <link rel="apple-touch-icon" type="image/png" href="https://github.takahashi65.info/apple-touch-icon.png" sizes="180x180" />
+        <link rel="icon" type="image/png" href="/favicon.png" sizes="256x256" />
+        <link rel="mask-icon" type="image/svg" href="/favicon.svg" color="#000000" />
+        <link rel="alternate icon" type="image/x-icon" href="/favicon.ico" sizes="256x256" />
+        <link rel="apple-touch-icon" type="image/png" href="/apple-touch-icon.png" sizes="180x180" />
         <!-- Title -->
         <title>Suzhou65 on GitHub</title>
         <meta name="description" content="GitHub Profile. Personal GitHub Pages" />
