--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                 </p>
                 <!--Break-->
                 <p>
-                    <a href="https://github.com/Suzhou65/CloudFlare-Dynamic-DNS" target="_self">CloudFlare-Dynamic-DNS</a>
+                    <a href="https://github.com/Suzhou65/Python-Cloudflare-DDNS" target="_self">Python-Cloudflare-DDNS</a>
                     <br>
-                    <small>Python module for request and update DNS Record at CloudFlare</small>
+                    <small>Small python script for request & update DNS Record hosting by Cloudflare via Cloudflare API.</small>
                 </p>
                 <!--Break-->
                 <p>
